--- a/sampleta/SConscript
+++ b/sampleta/SConscript
@@ -1,25 +1,18 @@
-#===========================================================================
-#  Copyright (c) 2011-2016, 2017 QUALCOMM Technologies Incorporated.
-#  All Rights Reserved.
-#  Qualcomm Confidential and Proprietary
-#===========================================================================
+# Copyright (C) 2021 The Android Open Source Project
 #
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
 #
-# GENERAL DESCRIPTION
-#    build script
-#                      EDIT HISTORY FOR FILE
+#      http://www.apache.org/licenses/LICENSE-2.0
 #
-#  This section contains comments describing changes made to the module.
-#  Notice that changes are listed in reverse chronological order.
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
 #
-# when       who     what, where, why
-# --------   ---     ---------------------------------------------------------
-#
-#===============================================================================
 
-#-------------------------------------------------------------------------------
-# Source PATH
-#-------------------------------------------------------------------------------
 import os
 
 Import('env')
