--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@
 *.aar
 *.ap_
 *.aab
-
 # Files for the ART/Dalvik VM
 *.dex
 
@@ -16,7 +15,7 @@ gen/
 out/
 #  Uncomment the following line in case you need and you don't have the release build type files in your app
 # release/
-
+bakup/
 # Gradle files
 .gradle/
 build/
