--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ update.sh
 bin/
 gen/
 out/
+sampleta/platform/kinibi/Out/
 #  Uncomment the following line in case you need and you don't have the release build type files in your app
 # release/
 bakup/
